[이수정] thymeleaf 와 jsp 를 view 로 사용 설정 및 테스트
jsp 기본 파일 위치 : /src/main/webapp/WEB-INF/jsp/
타임리프 템플릿 파일 기본 위치 : /src/main/resources/templates/

--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
   	//implementation 'javax.servlet:jstl'
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
