--- a/config/application.properties
+++ b/config/application.properties
@@ -1,17 +1,21 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/collectors_local?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=500035tjdrhd!
+spring.datasource.password=root0209!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-#jsp \uD398\uC774\uC9C0 \uC5F0\uACB0
-#spring.mvc.view.prefix=/WEB-INF/views/
-#spring.mvc.view.suffix=.jsp
+#jsp
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
+#thymeleaf
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.view-names=thymeleaf/*
 
 spring.thymeleaf.cache=false
 spring.thymeleaf.enabled=true
-spring.thymeleaf.prefix=classpath:
-spring.thymeleaf.suffix=.jsp
+spring.thymeleaf.encoding=UTF-8
+
 
 
 #JSP\uC218\uC815\uC2DC \uC11C\uBC84 \uC7AC\uC2DC\uC791\uC5C6\uC774 \uBC14\uB85C \uC801\uC6A9\uB420 \uC218 \uC788\uAC8C \uC124\uC815
