[이수정] application.properties 설정 (이메일, 캐시, log4j)

--- a/config/application.properties
+++ b/config/application.properties
@@ -19,8 +19,7 @@ spring.thymeleaf.encoding=UTF-8
 
 
 #JSP\uC218\uC815\uC2DC \uC11C\uBC84 \uC7AC\uC2DC\uC791\uC5C6\uC774 \uBC14\uB85C \uC801\uC6A9\uB420 \uC218 \uC788\uAC8C \uC124\uC815
-#server.servlet.jsp.init-parameters.development=true
-
+server.servlet.jsp.init-parameters.development=true
 
 
 #application-local.properties \uC124\uC815 
@@ -31,3 +30,17 @@ spring.thymeleaf.encoding=UTF-8
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.database=mysql
+
+
+#\uD68C\uC6D0\uAC00\uC785 \uC774\uBA54\uC77C \uC778\uC99D (\uAD6C\uAE00)
+
+mail.smtp.auth=true
+mail.smtp.starttls.required=true
+mail.smtp.starttls.enable=true
+mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
+mail.smtp.socketFactory.fallback=false
+mail.smtp.port=465
+mail.smtp.socketFactory.port=465
+
+
+logging.config=classpath:log4j2/log4j2.xml
