[이수정] jpa, redis 설정 정보 추가

--- a/config/application.properties
+++ b/config/application.properties
@@ -26,10 +26,10 @@ server.servlet.jsp.init-parameters.development=true
 #spring.profiles.active=local
 
 #jpa
-#spring.jpa.hibernate.ddl-auto=create
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.database=mysql
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database=mysql
 
 
 #\uD68C\uC6D0\uAC00\uC785 \uC774\uBA54\uC77C \uC778\uC99D (\uAD6C\uAE00)
@@ -44,3 +44,13 @@ mail.smtp.socketFactory.port=465
 
 
 logging.config=classpath:log4j2/log4j2.xml
+
+
+#Redis 설정
+spring.redis.host: localhost
+spring.redis.port: 6379
+
+
+
+
+
