--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	// log4j
 	implementation 'org.springframework.boot:spring-boot-starter-log4j2'
+	// redis
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+	// JPA
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
